--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
         </div>
       </nav>
     <main>
+        <article>
+            <div class="article-image-section article-section">
+                <span class="background-image" role="img" aria-label="Red dresses hung on crosses along a roadside commemorate children who died at the Kamloops Indian Residential School, an institution created to assimilate Indigenous children, following the detection of as many as 215 unmarked graves, Kamloops, British Columbia."> </span>
+            </div>
+            <div class="article-description-section article-section">
+                <p>
+                    Red dresses hung on crosses along a roadside commemorate children who died at the Kamloops Indian Residential School, an institution created to assimilate Indigenous children, following the detection of as many as 215 unmarked graves, Kamloops, British Columbia.
+                </p>
+            </div>
+            <div class="article-title-section article-section">
+                <h1>
+                    Kamloops Residential School
+                </h1>
+                <div>
+                    <span class="label">photographer</span>
+                    <p>Amber Bracken</p>
+                    <span>for The New York Times</span>
+                </div>
+            </div>
+            <div class="article-nav-section article-section"></div>
+        </article>
     </main>
 	<script src="index.js"></script>
   </body>
